# INM

./: README.md  album.py  artist.py  connect_database.py  main.py  playlist.py  pyproject.toml  track.py
data/: manager.py  tables.py
flutter/frontend/: pubspec.yaml
flutter/frontend/assets/Amatic_SC/: OFL.txt
flutter/frontend/assets/Inconsolata/: OFL.txt
flutter/frontend/assets/Nova_Mono/: OFL.txt
flutter/frontend/assets/Syne_Mono/: OFL.txt
flutter/frontend/lib/: auth_provider.dart  insert.dart  main.dart  providers.dart  superbase_config.dart
flutter/frontend/lib/classes/: album.dart  artist.dart  entity.dart  track.dart
flutter/frontend/lib/constants/: app_dimension.dart  assets.dart  colors.dart  widget_text.dart
flutter/frontend/lib/dimensions/: app_dimension.dart  auth_panel.dart  content_list_dimensions.dart  info_panel_dimension.dart  search_bar_dimensions.dart  tool_bar_dimension.dart
flutter/frontend/lib/providers/: album_provider.dart  display_provider.dart  search_provider.dart  selection_provider.dart  storage_provider.dart  superbase_config.dart
flutter/frontend/lib/themes/: text_theme.dart
flutter/frontend/lib/utils/: text_display_widgets.dart  time_display.dart
flutter/frontend/lib/widgets/: album_panel.dart  album_provider.dart  auth.dart  buttons.dart  display_tracks.dart  home_screen.dart  info_panel.dart  inputfield.dart  login.dart  login_checkbox.dart  message_service.dart  navbar.dart  register.dart  search_bar.dart  search_provider.dart  (+2 more)
flutter/frontend/linux/: CMakeLists.txt
flutter/frontend/windows/: CMakeLists.txt
(+2 files in other folders)
